tests/errors/range-too-large-number.spcasmtest
org 0
incbin "../binary.bin":0-2000000000000000000000000000000000